# SDL2_overlay

./: CMakeLists.txt
include/: SDL_overlay.h  SDL_overlay_config.h.cmake
src/: SDL_internal.h
src/overlay/: SDL_overlay.c
